--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.2.2",
     "prettier": "^2.8.4",
+    "sass": "^1.58.3",
     "typescript": "^4.9.5"
   }
 }
