--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "lintfix": "yarn lint --fix"
   },
   "devDependencies": {
+    "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.4.1",
     "@typescript-eslint/parser": "^5.53.0",
+    "@vueuse/nuxt": "^9.13.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.2.2",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vite-svg-loader": "^4.0.0"
   }
 }
