--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lintfix": "yarn lint --fix"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.4.3",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.4.1",
