--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.2.2",
+    "nuxt-icon": "^0.3.2",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
