--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.4.1",
     "@typescript-eslint/parser": "^5.53.0",
-    "@vueuse/nuxt": "^9.13.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -29,5 +28,9 @@
     "sass": "^1.58.3",
     "typescript": "^4.9.5",
     "vite-svg-loader": "^4.0.0"
+  },
+  "dependencies": {
+    "@vueuse/nuxt": "^9.13.0",
+    "nuxt-headlessui": "^1.1.1"
   }
 }
