--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.2.2",
+    "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.3.2",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
@@ -30,7 +31,6 @@
     "vite-svg-loader": "^4.0.0"
   },
   "dependencies": {
-    "@vueuse/nuxt": "^9.13.0",
-    "nuxt-headlessui": "^1.1.1"
+    "@vueuse/nuxt": "^9.13.0"
   }
 }
