--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/content": "^2.4.3",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/fontaine": "^0.2.4",
     "@nuxtjs/tailwindcss": "^6.4.1",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
