--- a/package.json
+++ b/package.json
@@ -14,22 +14,24 @@
     "lintfix": "yarn lint --fix"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.4.3",
+    "@nuxt/content": "^2.5.2",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/fontaine": "^0.2.4",
     "@nuxtjs/tailwindcss": "^6.4.1",
+    "@types/node": "^18.15.1",
     "@typescript-eslint/parser": "^5.53.0",
-    "eslint": "^8.34.0",
+    "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nuxt": "^3.2.2",
     "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.3.2",
     "prettier": "^2.8.4",
-    "sass": "^1.58.3",
+    "sass": "^1.59.2",
     "typescript": "^4.9.5",
-    "vite-svg-loader": "^4.0.0"
+    "vite-svg-loader": "^4.0.0",
+    "vue-tsc": "^1.2.0"
   },
   "dependencies": {
     "@vueuse/nuxt": "^9.13.0"
