🎨 Cleanup, improve directories/files structure.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pascal-achard.me",
-  "version": "2.1.0",
+  "name": "pascal-achard.com",
+  "version": "2.2.0",
   "description": "Pascal Achard's personal website",
   "author": "Pascal Achard",
   "private": true,
