--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nuxt": "^3.3.1",
     "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.3.3",
+    "nuxt-simple-sitemap": "^2.2.0",
     "prettier": "^2.8.6",
     "sass": "^1.59.3",
     "typescript": "^4.9.5",
