🔧 Update some config files

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
-shamefully-hoist=true
-strict-peer-dependencies=false
+; shamefully-hoist=true
+; strict-peer-dependencies=false
+always-auth=false
 registry=https://registry.npmjs.org/
