--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/tailwindcss": "^6.6.5",
     "@types/node": "^18.15.11",
     "@typescript-eslint/parser": "^5.57.1",
+    "color2k": "^2.0.2",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
