--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.5.2",
+    "@nuxt/devtools": "^0.4.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/fontaine": "^0.2.4",
-    "@nuxtjs/tailwindcss": "^6.6.5",
+    "@nuxtjs/fontaine": "^0.2.5",
+    "@nuxtjs/tailwindcss": "^6.6.6",
     "@types/node": "^18.15.11",
     "@typescript-eslint/parser": "^5.58.0",
     "color2k": "^2.0.2",
-    "consola": "^3.0.1",
+    "consola": "^3.0.2",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.4.0",
+    "nuxt": "^3.4.1",
     "nuxt-headlessui": "^1.1.1",
     "nuxt-icon": "^0.3.3",
     "nuxt-simple-robots": "^2.1.1",
@@ -38,6 +39,6 @@
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
-    "@vueuse/nuxt": "^9.13.0"
+    "@vueuse/nuxt": "^10.0.0"
   }
 }
