--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "mirrorful": "^6.1.10",
     "nuxt": "^3.4.2",
     "nuxt-headlessui": "^1.1.4",
     "nuxt-icon": "^0.3.3",
