--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/fontaine": "^0.2.5",
+    "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@nuxtjs/tailwindcss": "^6.6.6",
     "@types/node": "^18.15.13",
     "@typescript-eslint/parser": "^5.59.0",
