--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/fontaine": "^0.4.1",
-    "@nuxtjs/i18n": "8.0.0-beta.10",
+    "@nuxtjs/i18n": "^8.0.0-rc.4",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^20.4.4",
     "@typescript-eslint/parser": "^6.1.0",
