--- a/package.json
+++ b/package.json
@@ -14,32 +14,31 @@
     "lintfix": "yarn lint --fix"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.8.5",
+    "@nuxt/content": "^2.9.0",
     "@nuxt/devtools": "^1.0.0",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/i18n": "^8.0.0-rc.5",
-    "@nuxtjs/tailwindcss": "^6.8.0",
-    "@types/node": "^20.8.7",
-    "@typescript-eslint/parser": "^6.8.0",
-    "color2k": "^2.0.2",
-    "consola": "^3.2.3",
+    "@nuxtjs/tailwindcss": "^6.8.1",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/parser": "^6.9.1",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "nuxt": "^3.8.0",
     "nuxt-headlessui": "^1.1.4",
-    "nuxt-icon": "^0.5.0",
-    "nuxt-simple-robots": "^3.1.6",
-    "nuxt-simple-sitemap": "^3.4.0",
+    "nuxt-icon": "^0.6.1",
+    "nuxt-simple-robots": "^3.1.9",
+    "nuxt-simple-sitemap": "^3.4.1",
     "prettier": "^3.0.3",
-    "sass": "^1.69.4",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite-svg-loader": "^4.0.0",
-    "vue-tsc": "^1.8.19"
+    "vue-tsc": "^1.8.22"
   },
   "dependencies": {
-    "@vueuse/nuxt": "^10.5.0"
+    "@vueuse/nuxt": "^10.5.0",
+    "gsap": "^3.12.2"
   }
 }
