--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.9.0",
-    "@nuxt/devtools": "^1.0.0",
+    "@nuxt/devtools": "^1.0.1",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@nuxtjs/tailwindcss": "^6.9.4",
-    "@types/node": "^20.8.10",
+    "@types/node": "^20.9.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
@@ -38,6 +38,7 @@
     "vue-tsc": "^1.8.22"
   },
   "dependencies": {
-    "@vueuse/nuxt": "^10.5.0"
+    "@vueuse/nuxt": "^10.6.0",
+    "gsap": "^3.12.2"
   }
 }
