--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-tsc": "^1.8.22"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.27",
     "@vueuse/nuxt": "^10.6.1",
     "gsap": "^3.12.2"
   }
