--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.27",
     "@vueuse/nuxt": "^10.6.1",
-    "gsap": "^3.12.2"
+    "gsap": "^3.12.2",
+    "splitting": "^1.0.6"
   }
 }
