--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@nuxtjs/tailwindcss": "^6.9.5",
     "@types/node": "^20.9.2",
+    "@types/splitting": "^1.0.5",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
