--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "pascal-achard.com",
+  "type": "module",
   "version": "2.6.0",
+  "private": true,
   "description": "Pascal Achard's personal website",
   "author": "Pascal Achard",
-  "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
-    "lintfix": "yarn lint --fix"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "dependencies": {
+    "@fontsource/rubik": "^5.0.18",
+    "@studio-freight/lenis": "^1.0.29",
+    "@vueuse/nuxt": "^10.7.0",
+    "gsap": "^3.12.3",
+    "splitting": "^1.0.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.4.5",
@@ -39,12 +46,5 @@
     "typescript": "^5.3.3",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^1.8.25"
-  },
-  "dependencies": {
-    "@fontsource/rubik": "^5.0.18",
-    "@studio-freight/lenis": "^1.0.29",
-    "@vueuse/nuxt": "^10.7.0",
-    "gsap": "^3.12.3",
-    "splitting": "^1.0.6"
   }
 }
