--- a/package.json
+++ b/package.json
@@ -18,33 +18,33 @@
     "@fontsource/inter": "^5.0.16",
     "@fontsource/rubik": "^5.0.18",
     "@studio-freight/lenis": "^1.0.29",
-    "@vueuse/nuxt": "^10.7.0",
+    "@vueuse/nuxt": "^10.7.1",
     "gsap": "^3.12.4",
     "splitting": "^1.0.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.4.5",
-    "@nuxt/content": "^2.9.0",
+    "@antfu/eslint-config": "^2.6.1",
+    "@nuxt/content": "^2.10.0",
     "@nuxt/devtools": "^1.0.6",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
-    "@nuxtjs/i18n": "^8.0.0-rc.11",
-    "@nuxtjs/tailwindcss": "^6.10.1",
-    "@types/node": "^20.10.4",
+    "@nuxtjs/i18n": "^8.0.0",
+    "@nuxtjs/tailwindcss": "^6.10.3",
+    "@types/node": "^20.10.5",
     "@types/splitting": "^1.0.5",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8.55.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "nuxt": "^3.8.2",
-    "nuxt-headlessui": "^1.1.4",
+    "eslint-plugin-prettier": "^5.1.2",
+    "nuxt": "^3.9.0",
+    "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.7",
-    "nuxt-simple-robots": "^3.1.10",
-    "nuxt-simple-sitemap": "^4.1.17",
+    "nuxt-simple-robots": "^4.0.0-rc.7",
+    "nuxt-simple-sitemap": "^4.2.0",
     "sass": "^1.69.5",
     "typescript": "^5.3.3",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^1.8.25"
+    "vue-tsc": "^1.8.27"
   }
 }
