--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,34 +1,34 @@
-name: 'Bump Version'
+name: Bump Version
 
 on:
   push:
     branches:
-      - 'main'
+      - main
 
 jobs:
   bump-version:
-    name: 'Bump Version on master'
+    name: Bump Version on master
     runs-on: ubuntu-latest
     permissions:
       contents: write
 
     steps:
-      - name: 'Checkout source code'
-        uses: 'actions/checkout@v2'
+      - name: Checkout source code
+        uses: actions/checkout@v2
         with:
           ref: ${{ github.ref }}
-      - name: 'cat package.json'
+      - name: cat package.json
         run: cat ./package.json
       - name: Automated Version Bump
         uses: phips28/gh-action-bump-version@v10.1.1
         with:
-          tag-prefix: 'v'
-          patch-wording:  'fix, patch' 
+          tag-prefix: v
+          patch-wording: 'fix, patch'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: 'cat package.json'
+      - name: cat package.json
         run: cat ./package.json
-      - name: 'Output Step'
+      - name: Output Step
         env:
           NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
         run: echo "new tag $NEW_TAG"
