--- a/package.json
+++ b/package.json
@@ -23,26 +23,26 @@
     "splitting": "^1.0.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.1",
+    "@antfu/eslint-config": "^2.6.2",
     "@nuxt/content": "^2.10.0",
     "@nuxt/devtools": "^1.0.6",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/i18n": "^8.0.0",
-    "@nuxtjs/tailwindcss": "^6.10.3",
-    "@types/node": "^20.10.6",
+    "@nuxtjs/sitemap": "^5.0.1",
+    "@nuxtjs/tailwindcss": "^6.10.4",
+    "@types/node": "^20.10.8",
     "@types/splitting": "^1.0.5",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/parser": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "nuxt": "^3.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nuxt": "^3.9.1",
     "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.8",
-    "nuxt-simple-robots": "^4.0.0-rc.10",
-    "nuxt-simple-sitemap": "^4.4.1",
+    "nuxt-simple-robots": "4.0.0-rc.11",
     "sass": "^1.69.7",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
