--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.2",
     "@nuxt/content": "^2.10.0",
-    "@nuxt/devtools": "^1.0.6",
+    "@nuxt/devtools": "^1.0.8",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
@@ -48,5 +48,8 @@
     "uuid": "^9.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^1.8.27"
+  },
+  "engines": {
+    "pnpm": ">=8"
   }
 }
