--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "2.11.2",
   "private": true,
+  "packageManager": "pnpm@8.14.1",
   "description": "Pascal Achard's personal website",
   "author": "Pascal Achard",
   "scripts": {
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.2",
+    "@eslint/eslintrc": "^3.0.0",
     "@nuxt/content": "^2.10.0",
     "@nuxt/devtools": "^1.0.8",
     "@nuxtjs/color-mode": "^3.3.2",
@@ -39,6 +41,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-tailwindcss": "^3.14.0",
     "nuxt": "^3.9.1",
     "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.8",
