feat: Create Notion API and fetch data

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 # APIS
 NUXT_PUBLIC_LASTFM_API_KEY=
+NUXT_NOTION_API_PRIVATE_KEY=
 
 # Used by NuxtSimpeSitemap
 NUXT_PUBLIC_SITE_URL=
+
+# Notion db id
+NUXT_NOTION_DATABASE_ID=
 
 # Define IDE.
 LAUNCH_EDITOR=webstorm
