--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@notionhq/client": "^2.2.14",
     "@studio-freight/lenis": "^1.0.34",
     "@vueuse/nuxt": "^10.7.2",
+    "@vueuse/router": "^10.7.2",
     "gsap": "^3.12.5",
     "splitting": "^1.0.6"
   },
