--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nuxtjs/i18n": "^8.0.1",
     "@nuxtjs/sitemap": "^5.1.0",
     "@nuxtjs/tailwindcss": "^6.11.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.11.16",
     "@types/splitting": "^1.0.5",
     "@types/uuid": "^9.0.8",
