--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fontsource/rubik": "^5.0.18",
     "@notionhq/client": "^2.2.14",
     "@studio-freight/lenis": "^1.0.34",
+    "@vueuse/components": "^10.7.2",
     "@vueuse/nuxt": "^10.7.2",
     "@vueuse/router": "^10.7.2",
     "gsap": "^3.12.5",
