--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "splitting": "^1.0.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.3",
+    "@antfu/eslint-config": "^2.6.4",
     "@eslint/eslintrc": "^3.0.0",
     "@nuxt/content": "^2.11.0",
     "@nuxt/devtools": "^1.0.8",
@@ -36,7 +36,7 @@
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/i18n": "^8.0.1",
     "@nuxtjs/sitemap": "^5.1.0",
-    "@nuxtjs/tailwindcss": "^6.11.2",
+    "@nuxtjs/tailwindcss": "^6.11.3",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.11.16",
     "@types/splitting": "^1.0.5",
@@ -49,7 +49,7 @@
     "nuxt": "^3.10.0",
     "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.8",
-    "nuxt-simple-robots": "4.0.0-rc.11",
+    "nuxt-simple-robots": "^4.0.0-rc.14",
     "sass": "^1.70.0",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
