--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nuxtjs/i18n": "^8.1.0",
     "@nuxtjs/sitemap": "^5.1.0",
     "@nuxtjs/tailwindcss": "^6.11.3",
+    "@pinia/nuxt": "^0.5.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.11.16",
     "@types/splitting": "^1.0.6",
