--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@eslint/eslintrc": "^3.0.2",
     "@nuxt/content": "^2.12.1",
     "@nuxt/devtools": "^1.1.5",
+    "@nuxt/image": "^1.7.0",
     "@nuxtjs/color-mode": "^3.4.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.1",
@@ -48,7 +49,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tailwindcss": "^3.15.1",
-    "nuxt": "^3.11.2",
+    "nuxt": "^3.12.2",
     "nuxt-headlessui": "^1.2.0",
     "nuxt-icon": "^0.6.10",
     "nuxt-simple-robots": "^4.0.0-rc.17",
