--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@fontsource/rubik": "^5.0.20",
     "@headlessui/tailwindcss": "^0.2.1",
     "@notionhq/client": "^2.2.15",
-    "@studio-freight/lenis": "^1.0.42",
+    "lenis": "^1.1.4",
     "@vueuse/components": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
     "@vueuse/router": "^10.11.0",
@@ -31,20 +31,20 @@
     "@antfu/eslint-config": "^2.21.1",
     "@eslint/eslintrc": "^3.1.0",
     "@nuxt/content": "^2.13.0",
-    "@nuxt/devtools": "^1.3.6",
+    "@nuxt/devtools": "^1.3.7",
     "@nuxt/image": "^1.7.0",
-    "@nuxtjs/color-mode": "^3.4.1",
+    "@nuxtjs/color-mode": "^3.4.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.3",
     "@nuxtjs/i18n": "^8.3.1",
-    "@nuxtjs/sitemap": "^5.2.0",
+    "@nuxtjs/sitemap": "^5.2.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "@types/splitting": "^1.0.6",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -52,11 +52,11 @@
     "nuxt": "^3.12.2",
     "nuxt-headlessui": "^1.2.0",
     "nuxt-icon": "^0.6.10",
-    "nuxt-simple-robots": "^4.0.0-rc.17",
+    "nuxt-simple-robots": "^4.0.0-rc.19",
     "sass": "^1.77.6",
     "typescript": "^5.5.2",
     "uuid": "^10.0.0",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.0.21"
+    "vue-tsc": "^2.0.22"
   }
 }
