--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/fontaine": "^0.4.3",
     "@nuxtjs/i18n": "^8.3.1",
+    "@nuxtjs/robots": "^4.0.2",
     "@nuxtjs/sitemap": "^5.3.2",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
@@ -49,10 +50,9 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tailwindcss": "^3.17.4",
-    "nuxt": "^3.12.3",
+    "nuxt": "^3.12.4",
     "nuxt-headlessui": "^1.2.0",
     "nuxt-icon": "^0.6.10",
-    "nuxt-simple-robots": "^4.0.0-rc.19",
     "sass": "^1.77.6",
     "typescript": "^5.5.3",
     "uuid": "^10.0.0",
