--- a/package.json
+++ b/package.json
@@ -68,5 +68,10 @@
     "uuid": "^11.0.5",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.2.2"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3"
+    ]
   }
 }
