--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "2.26.0",
   "private": true,
-  "packageManager": "pnpm@10.4.0",
+  "packageManager": "pnpm@10.6.5",
   "description": "Pascal Achard's personal website",
   "author": "Pascal Achard",
   "scripts": {
@@ -16,58 +16,56 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.1.1",
-    "@fontsource/rubik": "^5.1.1",
     "@headlessui/tailwindcss": "^0.2.2",
-    "@notionhq/client": "^2.2.15",
-    "@vueuse/components": "^12.7.0",
-    "@vueuse/nuxt": "^12.7.0",
-    "@vueuse/router": "^12.7.0",
+    "@notionhq/client": "^2.3.0",
+    "@vueuse/components": "^13.0.0",
+    "@vueuse/nuxt": "^13.0.0",
+    "@vueuse/router": "^13.0.0",
     "gsap": "^3.12.7",
     "install": "^0.13.0",
-    "lenis": "^1.1.20",
+    "lenis": "^1.2.3",
     "splitting": "^1.1.0",
     "vue-router": "4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.2.1",
-    "@eslint/eslintrc": "^3.2.0",
+    "@antfu/eslint-config": "^4.10.2",
+    "@eslint/eslintrc": "^3.3.1",
     "@iconify-json/brandico": "^1.2.2",
     "@iconify-json/cib": "^1.2.2",
     "@iconify-json/eos-icons": "^1.2.2",
-    "@iconify-json/fluent": "^1.2.14",
+    "@iconify-json/fluent": "^1.2.16",
     "@iconify-json/logos": "^1.2.4",
-    "@iconify-json/material-symbols": "^1.2.14",
+    "@iconify-json/material-symbols": "^1.2.17",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/pajamas": "^1.2.5",
     "@nuxt/content": "^2.13.4",
-    "@nuxt/devtools": "^2.1.0",
-    "@nuxt/icon": "^1.10.3",
-    "@nuxt/image": "^1.9.0",
+    "@nuxt/devtools": "^2.3.1",
+    "@nuxt/fonts": "0.11.0",
+    "@nuxt/icon": "^1.11.0",
+    "@nuxt/image": "^1.10.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/fontaine": "^0.4.4",
-    "@nuxtjs/i18n": "^9.2.0",
-    "@nuxtjs/robots": "^5.2.2",
-    "@nuxtjs/sitemap": "^7.2.4",
-    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@nuxtjs/i18n": "^9.3.4",
+    "@nuxtjs/robots": "^5.2.8",
+    "@nuxtjs/sitemap": "^7.2.9",
+    "@nuxtjs/tailwindcss": "^6.13.2",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.13.11",
     "@types/splitting": "^1.0.6",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/parser": "^8.24.0",
-    "eslint": "^9.20.1",
-    "eslint-config-prettier": "^10.0.1",
+    "@typescript-eslint/parser": "^8.27.0",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-tailwindcss": "^3.18.0",
-    "nuxt": "^3.15.4",
+    "nuxt": "^3.16.1",
     "nuxt-headlessui": "^1.2.0",
-    "sass": "^1.85.0",
-    "typescript": "^5.7.3",
-    "uuid": "^11.0.5",
+    "sass": "^1.86.0",
+    "typescript": "^5.8.2",
+    "uuid": "^11.1.0",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.2.2"
+    "vue-tsc": "^2.2.8"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
