--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "2.26.2",
   "private": true,
-  "packageManager": "pnpm@10.6.5",
+  "packageManager": "pnpm@10.11.0",
   "description": "Pascal Achard's personal website",
   "author": "Pascal Achard",
   "scripts": {
@@ -18,59 +18,61 @@
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.2",
     "@notionhq/client": "^2.3.0",
-    "@vueuse/components": "^13.0.0",
-    "@vueuse/nuxt": "^13.0.0",
-    "@vueuse/router": "^13.0.0",
-    "gsap": "^3.12.7",
+    "@vueuse/components": "^13.2.0",
+    "@vueuse/nuxt": "^13.2.0",
+    "@vueuse/router": "^13.2.0",
+    "gsap": "^3.13.0",
     "install": "^0.13.0",
-    "lenis": "^1.2.3",
+    "lenis": "^1.3.2",
     "splitting": "^1.1.0",
-    "vue-router": "4"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.10.2",
+    "@antfu/eslint-config": "^4.13.0",
     "@eslint/eslintrc": "^3.3.1",
     "@iconify-json/brandico": "^1.2.2",
     "@iconify-json/cib": "^1.2.2",
     "@iconify-json/eos-icons": "^1.2.2",
-    "@iconify-json/fluent": "^1.2.16",
+    "@iconify-json/fluent": "^1.2.21",
     "@iconify-json/logos": "^1.2.4",
-    "@iconify-json/material-symbols": "^1.2.17",
+    "@iconify-json/material-symbols": "^1.2.20",
     "@iconify-json/mdi": "^1.2.3",
-    "@iconify-json/pajamas": "^1.2.5",
+    "@iconify-json/pajamas": "^1.2.7",
     "@nuxt/content": "^2.13.4",
-    "@nuxt/devtools": "^2.3.1",
-    "@nuxt/fonts": "0.11.0",
-    "@nuxt/icon": "^1.11.0",
+    "@nuxt/devtools": "^2.4.1",
+    "@nuxt/fonts": "^0.11.3",
+    "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "^9.3.4",
-    "@nuxtjs/robots": "^5.2.8",
-    "@nuxtjs/sitemap": "^7.2.9",
-    "@nuxtjs/tailwindcss": "^6.13.2",
-    "@pinia/nuxt": "^0.10.1",
+    "@nuxtjs/i18n": "^9.5.4",
+    "@nuxtjs/robots": "^5.2.10",
+    "@nuxtjs/sitemap": "^7.2.10",
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "@pinia/nuxt": "^0.11.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "^22.13.11",
+    "@types/node": "^22.15.18",
     "@types/splitting": "^1.0.6",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/parser": "^8.27.0",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "nuxt": "^3.17.3",
     "nuxt-headlessui": "^1.2.0",
-    "sass": "^1.86.0",
-    "typescript": "^5.8.2",
+    "sass": "^1.88.0",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^2.2.10"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "better-sqlite3",
-      "esbuild"
+      "esbuild",
+      "unrs-resolver",
+      "vue-demi"
     ]
   }
 }
