--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "2.26.4",
   "private": true,
-  "packageManager": "pnpm@10.11.0",
+  "packageManager": "pnpm@10.15.1",
   "description": "Pascal Achard's personal website",
   "author": "Pascal Achard",
   "scripts": {
@@ -18,59 +18,62 @@
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.2",
     "@notionhq/client": "^2.3.0",
-    "@vueuse/components": "^13.2.0",
-    "@vueuse/nuxt": "^13.2.0",
-    "@vueuse/router": "^13.2.0",
+    "@vueuse/components": "^13.9.0",
+    "@vueuse/nuxt": "^13.9.0",
+    "@vueuse/router": "^13.9.0",
     "gsap": "^3.13.0",
     "install": "^0.13.0",
-    "lenis": "^1.3.2",
+    "lenis": "^1.3.11",
     "splitting": "^1.1.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.13.0",
+    "@antfu/eslint-config": "^4.19.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@iconify-json/brandico": "^1.2.2",
-    "@iconify-json/cib": "^1.2.2",
-    "@iconify-json/eos-icons": "^1.2.2",
-    "@iconify-json/fluent": "^1.2.21",
-    "@iconify-json/logos": "^1.2.4",
-    "@iconify-json/material-symbols": "^1.2.20",
+    "@iconify-json/brandico": "^1.2.3",
+    "@iconify-json/cib": "^1.2.3",
+    "@iconify-json/eos-icons": "^1.2.4",
+    "@iconify-json/fa6-brands": "^1.2.6",
+    "@iconify-json/fluent": "^1.2.30",
+    "@iconify-json/logos": "^1.2.9",
+    "@iconify-json/material-symbols": "^1.2.34",
     "@iconify-json/mdi": "^1.2.3",
-    "@iconify-json/pajamas": "^1.2.7",
+    "@iconify-json/pajamas": "^1.2.15",
     "@nuxt/content": "^2.13.4",
-    "@nuxt/devtools": "^2.4.1",
-    "@nuxt/fonts": "^0.11.3",
-    "@nuxt/icon": "^1.12.0",
-    "@nuxt/image": "^1.10.0",
+    "@nuxt/devtools": "^2.6.3",
+    "@nuxt/fonts": "^0.11.4",
+    "@nuxt/icon": "^1.15.0",
+    "@nuxt/image": "^1.11.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@nuxtjs/i18n": "^9.5.4",
-    "@nuxtjs/robots": "^5.2.10",
-    "@nuxtjs/sitemap": "^7.2.10",
+    "@nuxtjs/i18n": "^9.5.6",
+    "@nuxtjs/robots": "^5.5.1",
+    "@nuxtjs/sitemap": "^7.4.3",
     "@nuxtjs/tailwindcss": "^6.14.0",
-    "@pinia/nuxt": "^0.11.0",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "^22.15.18",
+    "@types/node": "^22.18.1",
     "@types/splitting": "^1.0.6",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
-    "eslint-plugin-tailwindcss": "^3.18.0",
-    "nuxt": "^3.17.3",
-    "nuxt-headlessui": "^1.2.0",
-    "sass": "^1.88.0",
-    "typescript": "^5.8.3",
+    "@typescript-eslint/parser": "^8.42.0",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-tailwindcss": "^3.18.2",
+    "nuxt": "^3.19.0",
+    "nuxt-headlessui": "^1.2.1",
+    "sass": "^1.92.0",
+    "typescript": "^5.9.2",
     "uuid": "^11.1.0",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.2.10"
+    "vue-tsc": "^2.2.12"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@parcel/watcher",
       "better-sqlite3",
       "esbuild",
+      "sharp",
       "unrs-resolver",
       "vue-demi"
     ]
